# vpbank-cake-home-test

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.eng.md  README.md  build.sh  docker-compose.yaml  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/sync_sftp/: README.md  __init__.py  sync_sftp_directly.py
airflow/dags/sync_sftp/core/: __init__.py  file_info.py  file_repository.py
airflow/dags/sync_sftp/repositories/: __init__.py  sftp_repository.py
airflow/dags/sync_sftp/services/: __init__.py  file_sync_service.py
airflow/dags/sync_sftp/state/: __init__.py  file_state_store.py
airflow/dags/sync_sftp/utils/: __init__.py  config.py
